--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,9 @@
     <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+    <!-- <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico"> -->
 
-    <!-- Safari Webpage Icon    by-BY -->
+    <!-- Safari Webpage Icon  by-BY -->
     <link rel="apple-touch-icon" href="{{ site.baseurl }}/img/apple-touch-icon.png">
     
     <!-- Canonical URL -->
